--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -20,6 +20,11 @@
 <!-- estilo para imagen con parallax-->
 <link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
 <style>
+    #heading-breadcrumbs {
+        background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
+                                         url(../../img/Img_Web2/background-credito.jpg);
+        padding: 70px 0;
+    }
     .bs-callout {
         padding: 20px;
         margin: 20px 0;
@@ -157,37 +162,6 @@
     </div>
 </section>
 
-<section id="c_Credito" style="display:none;">
-    <div class="card_Credito">
-        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
-        <p>
-            Hola
-            <button class="myButtons"> Conoce mas</button>
-        </p>
-    </div>
-    <div class="card_Credito">
-        <img src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg" />
-        <p>
-            Hola
-            <button class="myButtons"> Conoce mas</button>
-        </p>
-    </div>
-    <div class="card_Credito">
-        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
-        <p>
-            Hola
-            <button class="myButtons"> Conoce mas</button>
-        </p>
-    </div>
-    <div class="card_Credito">
-        <img src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg" />
-        <p>
-            Hola
-            <button class="myButtons"> Conoce mas</button>
-        </p>
-    </div>
-</section>
-
 <!-- Nuevo Diseño  -->
 
 <section class="page__Credito">
@@ -199,7 +173,120 @@
         </p>
         <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
     </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+        <h2>Credito Educativo</h2>
+        <p>
+            El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
+        <h2>Credito Educativo</h2>
+        <p>
+            La <strong>COMPRA DE CARTERA</strong> permite cancelar deudas de otras<strong> entidades financieras</strong> y unificar en <strong>COFINAL</strong>
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
+        <h2>Credito Educativo</h2>
+        <p>
+            El <strong>CRÉDITO DE LIBRANZA</strong> es otorgado a <strong>empleados</strong> el cual se <strong>descuenta</strong> mensualmente de tu <strong>nómina.</strong>
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
+        <h2>Credito Educativo</h2>
+        <p>
+            El <strong>CRÉDITO DE CONSUMO</strong> destinado a satisfacer las necesidades de los asociados en la <strong>adquisición</strong> de
+            <strong>bienes de uso personal.</strong>
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
+        <h2>Credito Educativo</h2>
+        <p>
+            <strong>MICROCRÉDITO</strong> destinado para asociados cuyas <strong>actividades economicas</strong> sean comerciales,
+            agropecuarias, industriales y de servicios.
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
+        <h2>Credito Educativo</h2>
+        <p>
+            El <strong>CRÉDITO ROTATIVO</strong> es un cupo personal reutilizable, que se liga a la <strong>tarjeta débito,</strong> este permite contar con recursos las <strong>24 horas - 365 días</strong> del año.
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+
+    <div class="componente__Credito gBoxShadow">
+        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+        <h2>Credito Educativo</h2>
+        <p>
+            Con el <strong>CRÉDITO FINAGRO</strong> puedes disponer de los <strong>recursos suficientes</strong>  para el desarrollo de sus actividades <strong>agropecuarias.</strong>
+        </p>
+        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+    </div>
+    <section>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <p>CRÉDITO PARA VIVIENDA</p>
+        </a>
+    </section>
+    <section>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <p>CRÉDITO PARA VIVIENDA</p>
+        </a>
+    </section>
+    <section>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <p>CRÉDITO PARA VIVIENDA</p>
+        </a>
+    </section>
 </section>
+<div class="opciones_tarjetas">
+    <section>
+        <div class="componente__Credito2 gBoxShadow">
+            <img class="imagen_credito" src="~/img/Img_Web2/credito_Vivienda.jpg">
+            <h2>Credito de Vivienda</h2>
+            <p>
+                El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+    </section>
+    <section class="tipo_3">
+        <div class="componente__Credito2 gBoxShadow">
+            <img class="img_2" src="~/img/Img_Web2/credito_Vivienda.jpg">
+            <h2>Credito de Vivienda</h2>
+            <p>
+                El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+    </section>
+    <section>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <p>CRÉDITO PARA VIVIENDA</p>
+        </a>
+    </section>
+</div>
+
+
 <br />
 <br />
 <br />
@@ -208,8 +295,9 @@
 <br />
 <br />
 
+
 <!--contenido-->
-<div id="imagenes" class="row" style="background-color:#ffffff;">
+<div id="imagenes" class="row" style="background-color:#ffffff; display:none ">
     <div class="container">
         <div class="row">
             <!--EMPIEZA CREDITO EDUCATIVO-->
@@ -398,7 +486,7 @@
             </div>
         </div>
     </div>*@
-<!-- scrip para parallax-->
+<!-- scrip para parallax-->                                 
 
 
 <script type="text/javascript">
@@ -410,26 +498,26 @@
 
 
 
-    function setpos(element, factor) {
-        factor = factor || 2;
+    //function setpos(element, factor) {
+    //    factor = factor || 2;
 
-        var offset = $(element).offset();
-        var w = $(window);
+    //    var offset = $(element).offset();
+    //    var w = $(window);    
 
-        var posx = (offset.left - w.scrollLeft()) / factor;
-        var posy = (offset.top - w.scrollTop()) / factor;
+    //    var posx = (offset.left - w.scrollLeft()) / factor;
+    //    var posy = (offset.top - w.scrollTop()) / factor;
 
-        $(element).css('background-position', '100% ' + posy + 'px');
+    //    $(element).css('background-position', '100% ' + posy + 'px');
 
-        // use this to have parralax scrolling vertical and horizontal
-        //$(element).css('background-position', posx+'px '+posy+'px');
-    }
+    //    // use this to have parralax scrolling vertical and horizontal
+    //    //$(element).css('background-position', posx+'px '+posy+'px');
+    //}
 
-    $(document).ready(function () {
-        parallax();
-    }).scroll(function () {
-        parallax();
-    });
+    //$(document).ready(function () {
+    //    parallax();
+    //}).scroll(function () {
+    //    parallax();
+    //});
 </script>
 
 
