--- a/Ingenio.PortalWebExterno/Content/sass/pages/_credito.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_credito.scss
@@ -1,82 +1,308 @@
 ﻿@import '../abstracts/_functions.scss';
 @import '../abstracts/_colors.scss';
 
-#c_Credito {
-    @include obj-center();
-    flex-wrap:wrap;
-    flex-direction:row;
+.opciones_tarjetas {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+    width:70%;
 }
 
-.card_Credito {
-    width: 200px;
-    height: 200px;
-    background: red;
-    margin: 20px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+.tipo_5 {
+    width: 300px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    outline: none !important;
+    text-decoration: none !important;
+    display: block;
 
-    &:hover p{
-        clip-path: circle(150% at top left);
+    &:hover, &:focus {
+        text-decoration: none !important;
+        outline: none !important;
     }
 
-    img {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        object-fit: cover;
-        width: 100%;
-        /*z-index:1;*/
+
+    .s-back-switch {
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 
-    p {
-        background:$secondary-color-sombra;
-        grid-column: 1/2;
-        grid-row: 1/2;
+    .text {
+        align-self: center;
 
-        color:white;
-        font-size: 2.5rem;
+        .ptile {
+            font-size: 15px;
+            font-weight: 800;
+            color: $primary-color;
+            text-transform: uppercase;
+            display: block;
+            margin-bottom: 0;
+            position: relative;
+            width: 100%;
+            -ms-flex-item-align: center;
+            align-self: center;
+        }
 
-        display:grid;
-        text-align:center;
-        place-items: center;
+        .match-height {
+            align-self: center;
+            display: flex;
+            text-align: center;
+            margin: 10px 0px 15px;
+        }
 
-        clip-path: circle(0 at top left);
-        transition: clip-path 0.4s;
-
-    }
-}
-
-.page__Credito{
-    margin:10px;
-}
-
-.componente__Credito {
-    /*background: $primary-color;*/
-
-    @include obj-center();
-    flex-direction: column;
-    padding: 20px;
-    /*background: #f3f3f3;*/
-    /*border-radius:0 !important;*/
-    border-top: 1px solid $primary-color;
-
-    h2 {
-        color: $secondary-color;
-    }
-
-    img {
-        width: 50%;
-        object-fit: cover;
-        margin: 0 auto;
-    }
-
-    a {
-        width: 100%;
-        transition: all 0.1s cubic-bezier(0.55, 0.085, 0.68, 0.53);
-
-        &:hover, &:focus {
-            background: linear-gradient(90deg, $primary-color 0%, $secondary-color 99%);
-            color: white;
+        p {
+            font-size: 10px;
+            /*line-height: 0.3;*/
+            color: black;
+            margin: 0;
+            margin-bottom: 15px;
+            font-weight: 700;
+            letter-spacing: -0.25px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
         }
     }
+
+    picture {
+        display: block;
+        position: relative;
+        width: 210px;
+        height: 210px;
+        margin-right: 30px;
+        /* flex-shrink: 0; */
+        border-radius: 50%;
+        overflow: hidden;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
 }
+.learn_more {
+    width: 12rem;
+    height: auto;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 0;
+
+    .circle {
+        -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        position: relative;
+        display: block;
+        margin: 0;
+        width: 3rem;
+        height: 3rem;
+        background: $secondary-color;
+        border-radius: 1.625rem;
+    }
+
+    .button_text {
+        -webkit-transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        padding: 0.75rem 0;
+        margin: 0 0 0 1.85rem;
+        color: black;
+        font-weight: 700;
+        line-height: 1.6;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 15px;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+    .page__Credito {
+        margin: 30px;
+        @include obj-center();
+        flex-direction: row;
+        flex-wrap: wrap;
+        /*    @media screen and (min-width:750px) {
+        flex-direction: row;
+    }*/
+    }
+
+    .componente__Credito {
+        /*background: $primary-color;*/
+
+        @include obj-center();
+        flex-direction: column;
+        margin: 0 2% 20px;
+        padding: 20px;
+        max-width: 300px;
+        height: 350px;
+        box-sizing: border-box;
+        /*background: #f3f3f3;*/
+        /*border-radius:0 !important;*/
+        border: 1px solid $primary-color;
+
+        p {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+        }
+
+        h2 {
+            color: $secondary-color;
+            line-height: 24px;
+            font-size: 20px;
+        }
+
+        img {
+            width: 50%;
+            object-fit: cover;
+            margin: 0 auto;
+        }
+
+        a {
+            width: 100%;
+            transition: all 0.1s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+
+            &:hover, &:focus {
+                background: linear-gradient(90deg, $primary-color 0%, $secondary-color 99%);
+                color: white;
+            }
+        }
+    }
+
+    .componente__Credito2 {
+        /*background: $primary-color;*/
+
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+        max-width: 360px;
+        /*height: 350px;*/
+        box-sizing: border-box;
+        /*background: #f3f3f3;*/
+        border-radius: 0 !important;
+        border: 1px solid $primary-color;
+        gap: 10px;
+
+        h2 {
+            margin: 0 0 0 10px;
+            color: $secondary-color;
+            line-height: 24px;
+            font-size: 20px;
+        }
+
+        p {
+            margin: 10px 0 10px 10px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            -webkit-box-orient: vertical;
+        }
+
+
+        img {
+            width: 100%;
+            object-fit: cover;
+            margin: 0 auto;
+            border-radius: 5px;
+        }
+
+        a {
+            width: 50%;
+            transition: all 0.1s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+            border-radius: 0;
+            margin: 10px;
+
+            &:hover, &:focus {
+                background: linear-gradient(90deg, $primary-color 0%, $secondary-color 99%);
+                color: white;
+            }
+        }
+    }
+
+    .tipo_3 img.img_2 {
+        width: 150px;
+        height: 150px;
+        background-color: white;
+        border-radius: 50%;
+        text-align: center;
+        margin: auto;
+    }
+
+    .tipo_4 {
+        display: flex;
+        max-width: 271px;
+        width: 100%;
+        height: 197px;
+        flex-direction: column;
+        padding: 9px 34px;
+        align-items: flex-end;
+        box-shadow: 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5);
+        border-radius: 42px;
+        text-decoration: none;
+        margin: 24px 20px;
+        position: relative;
+        background: white;
+        justify-content: flex-end;
+        transition: all 0.2s ease 0s;
+        z-index: 1;
+
+        &:hover {
+            background-image: url(../../../img/Img_Web2/backitemcredit.png);
+            background-repeat: no-repeat;
+            transform: translateY(-5px);
+            transition: all 0.2s ease 0s;
+
+            p {
+                color: $secondary-color;
+            }
+        }
+
+        img {
+            width: 36px;
+            margin: 0px 11px 0px 0px;
+            font-size: 40px;
+            -webkit-text-fill-color: transparent;
+            position: absolute;
+            top: 37px;
+        }
+
+        p {
+            display: flex;
+            width: 100%;
+            margin: 22px 0px;
+            font-size: 20px;
+            color: black;
+            font-weight: 700;
+            letter-spacing: -0.4px;
+            line-height: 23px;
+            transition: all 0.2s ease 0s;
+        }
+    }
