--- a/Ingenio.PortalWebExterno/Content/style.red.css
+++ b/Ingenio.PortalWebExterno/Content/style.red.css
@@ -334,7 +334,7 @@
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 60vh; /* Tamñano del video*/
+  /*height: 60vh;*/ /* Tamñano del video*/
   /*min-height: 100%;*/
   /*background-size: cover;*/
   object-fit: cover;
@@ -2497,9 +2497,9 @@ fieldset[disabled] .btn-template-primary.active {
 }
 
 #heading-breadcrumbs {
-  background: url("../img/texture-bw.png") center center repeat;
-  padding: 20px 0;
-  margin-bottom: 40px;
+    background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background-credito.jpg);
+    padding: 40px 0;
+    margin-bottom: 40px;
 }
 
 #heading-breadcrumbs.no-mb {
