--- a/Ingenio.PortalWebExterno/Views/Shared/_Layout.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/_Layout.cshtml
@@ -49,11 +49,11 @@
 
 <body>
     <style>
-        #heading-breadcrumbs {
+        /*#heading-breadcrumbs {
             background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
                 url(../../img/Img_Web2/background-credito.jpg);
             padding: 70px 0;
-        }
+        }*/
     </style>
 
     <div  id="all">
