--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
     window.smartsupp || (function (d) {
@@ -15,7 +15,7 @@
         c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
         c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
     })(document);
-</script>
+</script>*@
 
 <!-- estilo para imagen con parallax-->
 <link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
@@ -165,99 +165,151 @@
 <!-- Nuevo Diseño  -->
 
 <section class="page__Credito">
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/educativo3.jpg">
-        <h2>Credito Educativo</h2>
-        <p>
-            El <strong>CRÉDITO EDUCATIVO</strong> dónde los <strong>asociados</strong> y sus <strong>hijos</strong> podrán lograr el sueño de realizar sus <strong>estudios.</strong>
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+    @*<div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/educativo3.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO EDUCATIVO</strong> dónde los <strong>asociados</strong> y sus <strong>hijos</strong> podrán lograr el sueño de realizar sus <strong>estudios.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
-        <h2>Credito Educativo</h2>
-        <p>
-            El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
-        <h2>Credito Educativo</h2>
-        <p>
-            La <strong>COMPRA DE CARTERA</strong> permite cancelar deudas de otras<strong> entidades financieras</strong> y unificar en <strong>COFINAL</strong>
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                La <strong>COMPRA DE CARTERA</strong> permite cancelar deudas de otras<strong> entidades financieras</strong> y unificar en <strong>COFINAL</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
-        <h2>Credito Educativo</h2>
-        <p>
-            El <strong>CRÉDITO DE LIBRANZA</strong> es otorgado a <strong>empleados</strong> el cual se <strong>descuenta</strong> mensualmente de tu <strong>nómina.</strong>
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO DE LIBRANZA</strong> es otorgado a <strong>empleados</strong> el cual se <strong>descuenta</strong> mensualmente de tu <strong>nómina.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
-        <h2>Credito Educativo</h2>
-        <p>
-            El <strong>CRÉDITO DE CONSUMO</strong> destinado a satisfacer las necesidades de los asociados en la <strong>adquisición</strong> de
-            <strong>bienes de uso personal.</strong>
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO DE CONSUMO</strong> destinado a satisfacer las necesidades de los asociados en la <strong>adquisición</strong> de
+                <strong>bienes de uso personal.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
-        <h2>Credito Educativo</h2>
-        <p>
-            <strong>MICROCRÉDITO</strong> destinado para asociados cuyas <strong>actividades economicas</strong> sean comerciales,
-            agropecuarias, industriales y de servicios.
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                <strong>MICROCRÉDITO</strong> destinado para asociados cuyas <strong>actividades economicas</strong> sean comerciales,
+                agropecuarias, industriales y de servicios.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
-        <h2>Credito Educativo</h2>
-        <p>
-            El <strong>CRÉDITO ROTATIVO</strong> es un cupo personal reutilizable, que se liga a la <strong>tarjeta débito,</strong> este permite contar con recursos las <strong>24 horas - 365 días</strong> del año.
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO ROTATIVO</strong> es un cupo personal reutilizable, que se liga a la <strong>tarjeta débito,</strong> este permite contar con recursos las <strong>24 horas - 365 días</strong> del año.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
 
-    <div class="componente__Credito gBoxShadow">
-        <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
-        <h2>Credito Educativo</h2>
-        <p>
-            Con el <strong>CRÉDITO FINAGRO</strong> puedes disponer de los <strong>recursos suficientes</strong>  para el desarrollo de sus actividades <strong>agropecuarias.</strong>
-        </p>
-        <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-    </div>
-    <section>
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                Con el <strong>CRÉDITO FINAGRO</strong> puedes disponer de los <strong>recursos suficientes</strong>  para el desarrollo de sus actividades <strong>agropecuarias.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>*@
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/EDUCATIVO3.jpg">
+            <p>CRÉDITO EDUCATIVO</p>
+        </a>
+    </article>
+    <article>
         <a class="tipo_4" href="#">
             <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
             <p>CRÉDITO PARA VIVIENDA</p>
         </a>
-    </section>
-    <section>
+    </article>
+    <article>
         <a class="tipo_4" href="#">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
-            <p>CRÉDITO PARA VIVIENDA</p>
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
+            <p>COMPRA DE CARTERA</p>
         </a>
-    </section>
-    <section>
+    </article>
+    <article>
         <a class="tipo_4" href="#">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
-            <p>CRÉDITO PARA VIVIENDA</p>
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
+            <p>CRÉDITO DE LIBRANZA</p>
         </a>
-    </section>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
+            <p>CRÉDITO DE CONSUMO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
+            <p>MICROCRÉDITO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
+            <p>CRÉDITO ROTATIVO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+            <p>CRÉDITO FINAGRO</p>
+        </a>
+    </article>
 </section>
-<div class="opciones_tarjetas">
+<section>
+    <div class="container__Herramienta">
+        <h3>Herramienta de crédito</h3>
+        <div class="section__Credito">
+            <div>
+                <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+                <div class="myButtons">Solicita tu crédito</div>
+            </div>
+            <div>
+                <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+                <div class="myButtons">Simulador de crédito</div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="politicas_container">
+    <div>Politicas del sitio</div>
+    <div>Politicas del privacidad</div>
+    <div>Protección de datos personales</div>
+    <div>Indicadores economicos</div>
+</section>
+
+<div class="opciones_tarjetas" style="display:none">
     <section>
         <div class="componente__Credito2 gBoxShadow">
             <img class="imagen_credito" src="~/img/Img_Web2/credito_Vivienda.jpg">
@@ -265,7 +317,7 @@
             <p>
                 El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
             </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons link__button">Conoce más</a>
         </div>
     </section>
     <section class="tipo_3">
@@ -285,6 +337,7 @@
         </a>
     </section>
 </div>
+
 
 
 <br />
