--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -389,12 +389,13 @@ content-video > myButtons:hover {
     object-fit: cover;
     margin: 0 auto;
     border-radius: 5px; }
-  .componente__Credito2 a {
+  .componente__Credito2 a.link__button {
     width: 50%;
     transition: all 0.1s cubic-bezier(0.55, 0.085, 0.68, 0.53);
     border-radius: 0;
-    margin: 10px; }
-    .componente__Credito2 a:hover, .componente__Credito2 a:focus {
+    margin: 10px;
+    text-decoration: none !important; }
+    .componente__Credito2 a.link__button:hover, .componente__Credito2 a.link__button:focus {
       background: linear-gradient(90deg, rgba(224, 85, 20, 0.75) 0%, rgba(236, 28, 36, 0.75) 99%);
       color: white; }
 
@@ -408,10 +409,10 @@ content-video > myButtons:hover {
 
 .tipo_4 {
   display: flex;
-  max-width: 271px;
-  width: 100%;
+  width: 271px;
   height: 197px;
   flex-direction: column;
+  justify-content: flex-end;
   padding: 9px 34px;
   align-items: flex-end;
   box-shadow: 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5);
@@ -420,7 +421,6 @@ content-video > myButtons:hover {
   margin: 24px 20px;
   position: relative;
   background: white;
-  justify-content: flex-end;
   transition: all 0.2s ease 0s;
   z-index: 1; }
   .tipo_4:hover {
@@ -428,15 +428,17 @@ content-video > myButtons:hover {
     background-repeat: no-repeat;
     transform: translateY(-5px);
     transition: all 0.2s ease 0s; }
+    .tipo_4:hover a {
+      text-decoration: none; }
     .tipo_4:hover p {
       color: rgba(236, 28, 36, 0.75); }
   .tipo_4 img {
-    width: 36px;
+    width: 60px;
     margin: 0px 11px 0px 0px;
     font-size: 40px;
     -webkit-text-fill-color: transparent;
     position: absolute;
-    top: 37px; }
+    top: 20px; }
   .tipo_4 p {
     display: flex;
     width: 100%;
@@ -447,6 +449,61 @@ content-video > myButtons:hover {
     letter-spacing: -0.4px;
     line-height: 23px;
     transition: all 0.2s ease 0s; }
+
+.page__Credito {
+  margin: 0 10rem 100px; }
+  @media (min-width: 1390px) {
+    .page__Credito {
+      margin: 0 10rem; } }
+  .page__Credito article a {
+    text-decoration: none; }
+
+.section__Credito img {
+  width: 200px; }
+
+.container__Herramienta {
+  border: 1px solid rgba(224, 85, 20, 0.75);
+  border-top: 10px solid rgba(236, 28, 36, 0.75);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 30px;
+  margin: 0 30px; }
+  .container__Herramienta .section__Credito {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    gap: 20px;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap; }
+
+.politicas_container {
+  place-content: center;
+  margin: 0 10px;
+  display: grid;
+  gap: 1rem;
+  max-width: 1300px;
+  /*grid-auto-rows:22rem;*/
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr)); }
+  @media (min-width: 1400px) {
+    .politicas_container {
+      margin: auto; } }
+  .politicas_container div {
+    display: grid;
+    place-content: center;
+    border-bottom: none;
+    font-size: 25px;
+    padding: 15px 15px;
+    border-right: 3px solid black; }
+    @media (max-width: 510px) {
+      .politicas_container div {
+        border-bottom: 3px solid black;
+        border-right: none;
+        place-content: start; } }
 
 .myButtons {
   padding: 10px 50px;
