--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -158,6 +158,7 @@
 
 
 </div>
+
 <!--nota-->
 
 <section id="textura">
@@ -173,8 +174,133 @@
 
 </section>
 
+<section class="page__Credito">
+    @*<div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/educativo3.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO EDUCATIVO</strong> dónde los <strong>asociados</strong> y sus <strong>hijos</strong> podrán lograr el sueño de realizar sus <strong>estudios.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                La <strong>COMPRA DE CARTERA</strong> permite cancelar deudas de otras<strong> entidades financieras</strong> y unificar en <strong>COFINAL</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO DE LIBRANZA</strong> es otorgado a <strong>empleados</strong> el cual se <strong>descuenta</strong> mensualmente de tu <strong>nómina.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO DE CONSUMO</strong> destinado a satisfacer las necesidades de los asociados en la <strong>adquisición</strong> de
+                <strong>bienes de uso personal.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                <strong>MICROCRÉDITO</strong> destinado para asociados cuyas <strong>actividades economicas</strong> sean comerciales,
+                agropecuarias, industriales y de servicios.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                El <strong>CRÉDITO ROTATIVO</strong> es un cupo personal reutilizable, que se liga a la <strong>tarjeta débito,</strong> este permite contar con recursos las <strong>24 horas - 365 días</strong> del año.
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>
+
+        <div class="componente__Credito gBoxShadow">
+            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
+            <h2>Credito Educativo</h2>
+            <p>
+                Con el <strong>CRÉDITO FINAGRO</strong> puedes disponer de los <strong>recursos suficientes</strong>  para el desarrollo de sus actividades <strong>agropecuarias.</strong>
+            </p>
+            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
+        </div>*@
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/cofiahorrito.png">
+            <p>COFIAHORRITO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/cofijunior1.png">
+            <p>COFIJUNIOR</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/cofidiario.png">
+            <p>COFIDIARIO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/empresarial.png">
+            <p>AH. EMPRESARIAL</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/logo_semilla.png">
+            <p>S. COOPERATIVA</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/ahprogramado.png">
+            <p>A. PROGRAMADO</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/cdat.png">
+            <p>CDAT</p>
+        </a>
+    </article>
+    <article>
+        <a class="tipo_4" href="#">
+            <img class="imagen_credito" src="~/img/tarjeta-01.png">
+            <p>TARJETA DEBITO</p>
+        </a>
+    </article>
+</section>
+
+
 <!--contenido-->
-<div id="imagenes" class="row" style="background-color: #ffffff;">
+<div id="imagenes" class="row" style="background-color: #ffffff;display:none;">
     <div class="container">
         <div class="row">
             <!--empieza aqui COFIAHORRITO-->
