--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     <meta name="keywords" content="">
 
     <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">
+    @*<script type="text/javascript">
         var _smartsupp = _smartsupp || {};
         _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
         window.smartsupp || (function (d) {
@@ -31,7 +31,7 @@
             c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
             c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
         })(document);
-    </script>
+    </script>*@
     <!-- estilo para imagen con Font awesome-->
     <script src="https://kit.fontawesome.com/f9533edd0d.js" crossorigin="anonymous"></script>
 
